Don't ask for OTP on this computer FEATURE introduced!

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ students/students_cv/*
 images/profile/*
 students/images/profile/*
 .buildpath
+students/includes/errors/*.php~
+includes/errors/*.php~
